# DesafioAPI_SquadSarahGilbert

./: README.md  app.py  pyproject.toml  requirements.txt  routes.py
static/: hamburguer.js  svg-toggle.css
templates/: characters.html  documentation.html  episode.html  episodes.html  footer.html  layouts.html  location.html  locations.html  nav.html  pagination.html  profile.html
